# used-car-price

./: .gitignore  LICENSE  README.md  app.py  etl.py  pyproject.toml
artifacts/: used_cars_pipeline.joblib
modeling/: deploy_model.py  eval_model.py  metrics.json  params.json  params.py
src/used_car_price/data_layers/bronze/: bronze.sql
src/used_car_price/data_layers/silver/: silver.sql
